@@ -1,3 +1,13 @@
+2011-09-08  Mark Pilgrim  <pilgrim@chromium.org>
+
+        Test how animation methods react to too few arguments
+        https://bugs.webkit.org/show_bug.cgi?id=66539
+
+        Reviewed by Darin Adler.
+
+        * fast/animation/request-animation-frame-missing-arguments-expected.txt: Added.
+        * fast/animation/request-animation-frame-missing-arguments.html: Added.
+
 2011-09-08  Hayato Ito  <hayato@chromium.org>
 
         Add a layout test for the case where an accesskey is defined in shadow DOM.
